turn on pump into elastic search

--- a/logstash.conf
+++ b/logstash.conf
@@ -1,27 +1,27 @@
 input {
-#  s3 {
-#    bucket => "papertrail.steller.co"
-#    prefix => "papertrail/logs/3132014"
-#    credentials => ["AKIAJA2XWST5HPKX2ODA", "RUaKfG7+B9ZiHTh+LevNJzlKbcJesUATBPzWZC7o"]
-#  }
   s3 {
     bucket => "papertrail.steller.co"
-    prefix => "testfiles"
+    prefix => "papertrail/logs/3132014"
     credentials => ["AKIAJA2XWST5HPKX2ODA", "RUaKfG7+B9ZiHTh+LevNJzlKbcJesUATBPzWZC7o"]
   }
+#  s3 {
+#    bucket => "papertrail.steller.co"
+#    prefix => "testfiles"
+#    credentials => ["AKIAJA2XWST5HPKX2ODA", "RUaKfG7+B9ZiHTh+LevNJzlKbcJesUATBPzWZC7o"]
+#  }
   #stdin {}
 }
 
 output {
   # connectoid to the found.no steller logs cluster
-#  elasticsearch_http {
-#    host => "2b12e09a66c713b343d6d56b14924823-us-east-1.foundcluster.com"
-#    port => 9200
-#    user => "readwrite"
-#    password => "9r6qcgqfqiatcjrhdf"
-#    template => "./elasticsearch-template.json"
-#  }
-  stdout { codec => rubydebug }
+  elasticsearch_http {
+    host => "2b12e09a66c713b343d6d56b14924823-us-east-1.foundcluster.com"
+    port => 9200
+    user => "readwrite"
+    password => "9r6qcgqfqiatcjrhdf"
+    template => "./elasticsearch-template.json"
+  }
+  # stdout { codec => rubydebug }
 }
 
 filter {
