formalize sincedb in s3 usage based on config settings

--- a/logstash.conf
+++ b/logstash.conf
@@ -2,6 +2,8 @@ input {
   s3 {
     bucket => "papertrail.steller.co"
     prefix => "papertrail/logs/3132014"
+    sincedb_in_s3_bucket => "papertrail.steller.co"
+    sincedb_path => "sincedb"
     credentials => ["AKIAJA2XWST5HPKX2ODA", "RUaKfG7+B9ZiHTh+LevNJzlKbcJesUATBPzWZC7o"]
   }
 #  s3 {
