Add support for [cid:], [uid:], and enhanced [au:]

--- a/logstash.conf
+++ b/logstash.conf
@@ -6,12 +6,6 @@ input {
     sincedb_path => "sincedb"
     credentials => ["AKIAJA2XWST5HPKX2ODA", "RUaKfG7+B9ZiHTh+LevNJzlKbcJesUATBPzWZC7o"]
   }
-#  s3 {
-#    bucket => "papertrail.steller.co"
-#    prefix => "testfiles"
-#    credentials => ["AKIAJA2XWST5HPKX2ODA", "RUaKfG7+B9ZiHTh+LevNJzlKbcJesUATBPzWZC7o"]
-#  }
-  #stdin {}
 }
 
 output {
@@ -23,7 +17,6 @@ output {
     password => "9r6qcgqfqiatcjrhdf"
     template => "./elasticsearch-template.json"
   }
-  # stdout { codec => rubydebug }
 }
 
 filter {
@@ -85,6 +78,12 @@ filter {
   }
   grok {
     patterns_dir => [ "./apipatterns" ]
+    match => { "message" => "%{AUTH_USER_WITH_NAME}" }
+    tag_on_failure => []
+  }
+
+  grok {
+    patterns_dir => [ "./apipatterns" ]
     match => { "message" => "%{API_META_DATA}" }
     tag_on_failure => []
   }
@@ -101,6 +100,76 @@ filter {
     patterns_dir => [ "./apipatterns" ]
     match => { "message" => "%{SECONDARY_IDS}" }
     tag_on_failure => []
+  }
+
+  # process [uid: id,name] IF after doing this there is no user_name, it means
+  # this pattern wasn't found. If this is the case, then if there is a user_id
+  # and an auth_user it means the rest URL contains a primary id. If the id's
+  # are the same then set the username property
+  grok {
+    patterns_dir => [ "./apipatterns" ]
+    match => { "message" => "%{USER_WITH_NAME}" }
+    tag_on_failure => []
+  }
+  if ![user_name] {
+    if [user_id] and [auth_user] and [auth_user_name] and [user_id] == [auth_user] {
+      mutate {
+        add_field => {
+          "user_name" => "%{[auth_user_name]}"
+        }
+      }
+    }
+  }
+  # if the rest url pattern came with a user_id, and there was also a uid annotation, then
+  # drop the uid id, otherwise, if it exists set user_id and drop uid. All we are trying to
+  # do is avoid an array in user_id
+  if [uid] and [user_name] {
+    if [user_id] {
+      mutate {
+        remove_field => ["uid"]
+      }
+    } else {
+      mutate {
+        add_field => {"user_id" => "%{[uid]}"}
+        remove_field => ["uid"]
+      }
+    }
+  }
+
+  # process [cid: id,username,collectionname] IF after doing this there is a cid and collection_name
+  # then hoist cid to collection_id and drop cid. The point is to avoid arrays of collection_id which
+  # can occur when the rest url contains a primary collection id and the logs are annotated with cid
+  grok {
+    patterns_dir => [ "./apipatterns" ]
+    match => { "message" => "%{COLLECTION_WITH_NAME}" }
+    tag_on_failure => []
+  }
+  if [cid] and [collection_name] {
+    if [collection_id] {
+      mutate {
+        remove_field => ["cid"]
+      }
+    } else {
+      mutate {
+        add_field => {"collection_id" => "%{[cid]}"}
+        remove_field => ["cid"]
+      }
+    }
+  }
+
+  # all the id fields end in _id, so set auth_user_id and make auth_user the blended form
+  if [auth_user] {
+    mutate {
+      add_field => {"auth_user_id" => "%{auth_user}"}
+    }
+    if [auth_user_name] {
+      mutate {
+        remove_field => ["auth_user"]
+      }
+      mutate {
+        add_field => {"auth_user" => "%{auth_user_id},%{auth_user_name}"}
+      }
+    }
   }
 
   # pick up VERB and PATH
