don't tokenize strings, process ua

--- a/logstash.conf
+++ b/logstash.conf
@@ -16,6 +16,7 @@ output {
     user => "readwrite"
     password => "9r6qcgqfqiatcjrhdf"
     template => "./elasticsearch-template.json"
+    template_overwrite => true
   }
 }
 
@@ -157,6 +158,41 @@ filter {
     }
   }
 
+  # raw user agent -or- unknown
+  grok {
+    patterns_dir => [ "./apipatterns" ]
+    match => { "message" => "%{USER_AGENT}" }
+    tag_on_failure => []
+  }
+  if ![raw_ua] {
+      mutate {
+        add_field => {"raw_ua" => "not-supplied"}
+      }
+  }
+  grok {
+    patterns_dir => [ "./apipatterns" ]
+    match => { "message" => "%{STELLER_USER_AGENT}" }
+    tag_on_failure => []
+  }
+  if [steller_product_base] {
+      if [steller_build] {
+        mutate {
+          add_field => {"steller_product" => "%{steller_product_base}/%{steller_build}"}
+        }
+      } else {
+        mutate {
+          add_field => {"steller_product" => "%{steller_product_base}/000"}
+        }
+      }
+  } else {
+      mutate {
+        add_field => {
+          "steller_product_base" => "unknown"
+          "steller_product" => "unknown/000"
+        }
+      }
+  }
+
   # all the id fields end in _id, so set auth_user_id and make auth_user the blended form
   if [auth_user] {
     mutate {
@@ -170,6 +206,13 @@ filter {
         add_field => {"auth_user" => "%{auth_user_id},%{auth_user_name}"}
       }
     }
+  } else {
+      mutate {
+        add_field => {
+          "auth_user" => "0,$unauthenticated$"
+          "auth_user_name" => "$unauthenticated$"
+        }
+      }
   }
 
   # pick up VERB and PATH
